Update to Pulumi SDK v3.136.0 to fix pkg_resources deprecation
This is a Materialize fork of benesch/pulumi-postgresql-exec with the
following changes:

- Update Go dependencies to use Pulumi SDK v3.136.0
- Regenerate Python SDK which now uses importlib.metadata instead of
  deprecated pkg_resources
- Add missing interface methods required by newer Pulumi SDK (Attach,
  Call, GetMapping, GetMappings, Parameterize)
- Update goreleaser config to v2 format
- Update GitHub Actions workflow for modern action versions
- Include generated SDK in repo for easier consumption

This fixes the deprecation warning:
  pkg_resources is deprecated as an API. See
  https://setuptools.pypa.io/en/latest/pkg_resources.html

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,6 +1,9 @@
+version: 2
+
 archives:
   - id: archive
     name_template: "{{ .Binary }}-{{ .Tag }}-{{ .Os }}-{{ .Arch }}"
+
 builds:
   - goarch:
       - amd64
@@ -13,5 +16,6 @@ builds:
     binary: pulumi-resource-postgresql-exec
     ldflags:
       - -X main.version={{.Tag}}
+
 changelog:
-  skip: true
+  disable: true
