--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,25 +8,18 @@ jobs:
   goreleaser:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       # https://github.com/actions/checkout/issues/290
       - run: git fetch --force --tags
-      - uses: actions/setup-go@v2
+      - uses: actions/setup-go@v5
         with:
-          go-version: 1.16
-      - uses: goreleaser/goreleaser-action@v2
+          go-version: '1.21'
+      - uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
           version: latest
-          args: release --rm-dist
+          args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - run: make python-sdk
-      - run: python setup.py build sdist
-        working-directory: sdk/python
-      - uses: pypa/gh-action-pypi-publish@master
-        with:
-          password: ${{ secrets.PYPI_API_TOKEN }}
-          packages_dir: sdk/python/dist/
